--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,64 @@
+body {
+    display: flex;
+    justify-content: center;
+  }
 
-/* 
+  .chassis {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    width: 25vw;
+    height: 55vh;
+    padding: 5px;
+    border-radius: 30px;
+    place-items: center;
+  }
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+  .cirGreen {
+      margin: 10px;
+      height: 100px;
+      width: 100px;
+      background-color: green;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: 0.9s ease-in-out;
 
-*/
+    }
+  
+    .cirYell {
+      margin: 10px;
+      height: 100px;
+      width: 100px;
+      background-color: yellow;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: 0.9s ease-in-out;
+
+    }
+  
+    .cirRed {
+      margin: 10px;
+      height: 100px;
+      width: 100px;
+      background-color: red;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: 0.9s ease-in-out;
+    }
+      
+    .lighted {
+      background-color: white;
+      margin: 10px;
+      height: 100px;
+      width: 100px;
+      padding: 10px 20px;
+      border-radius: 50%;
+      cursor: pointer;
+      filter: blur(20px);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+                  0 0 20px rgba(255, 255, 255, 0.8),
+                  0 0 30px rgba(255, 255, 255, 0.8),
+                  0 0 40px rgba(255, 255, 255, 0.8);
+    }
+ 
